// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown should render component 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c6.c6 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c6.c6 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c6 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c6.c6[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c6.c6[data-disabled='true'].c6.c6[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c0 {
  pointer-events: none;
  position: fixed;
  overflow: visible;
  z-index: var(--admiral-z-index-dropdown, 97);
}

.c3 {
  pointer-events: initial;
  margin: 8px 0;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  border-radius: var(--admiral-border-radius-Medium, 4px);
  box-shadow: var(--admiral-box-shadow-Shadow08,    0px 3.2px 9px 0px rgba(0, 0, 0, 0.16), 0px 0.6px 1.8px 0px rgba(0, 0, 0, 0.10), 0px -1.5px 6px 0px rgba(0, 0, 0, 0.06) );
  flex: 0 0 auto;
  opacity: 0;
  transition-delay: 200ms;
  transition-property: opacity;
}

.c2 {
  pointer-events: none;
  height: 100%;
  flex: 0 0 auto;
}

.c1 {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
}

.c5 {
  padding: unset;
  margin: unset;
}

.c4 {
  padding: 8px 0;
  overflow-x: hidden;
  overflow-y: auto;
  max-height: 288px;
  cursor: pointer;
  outline: none;
  margin: 8px 0;
}

<body>
    <div />
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3 c4 dropdown-container"
        style="opacity: 1;"
      >
        <ul
          class="c5"
        >
          <li
            class="c6"
            tabindex="0"
            value="1"
          >
            Option
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DropDown should render group components 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c6.c6 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c6.c6 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c6 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c6.c6[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c6.c6[data-disabled='true'].c6.c6[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c7 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c7.c7 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c7.c7 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c7 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

ul[data-selectedid="2"] .c7.c7 {
  background: var(--admiral-color-Opacity_Focus, #00000017);
}

.c7:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c7.c7[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c7.c7[data-disabled='true'].c7.c7[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c8 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c8.c8 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c8.c8 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c8 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

ul[data-selectedid="3"] .c8.c8 {
  background: var(--admiral-color-Opacity_Focus, #00000017);
}

.c8:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c8.c8[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c8.c8[data-disabled='true'].c8.c8[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c9 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c9.c9 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c9.c9 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c9 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

ul[data-selectedid="4"] .c9.c9 {
  background: var(--admiral-color-Opacity_Focus, #00000017);
}

.c9:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c9.c9[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c9.c9[data-disabled='true'].c9.c9[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c10 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c10.c10 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c10.c10 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c10 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

ul[data-selectedid="5"] .c10.c10 {
  background: var(--admiral-color-Opacity_Focus, #00000017);
}

.c10:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c10.c10[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c10.c10[data-disabled='true'].c10.c10[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c11 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c11.c11 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c11.c11 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c11 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

ul[data-selectedid="10"] .c11.c11 {
  background: var(--admiral-color-Opacity_Focus, #00000017);
}

.c11:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c11.c11[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c11.c11[data-disabled='true'].c11.c11[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c12 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c12.c12 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c12.c12 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c12 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

ul[data-selectedid="11"] .c12.c12 {
  background: var(--admiral-color-Opacity_Focus, #00000017);
}

.c12:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c12.c12[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c12.c12[data-disabled='true'].c12.c12[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c13 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c13.c13 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c13.c13 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c13 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

ul[data-selectedid="12"] .c13.c13 {
  background: var(--admiral-color-Opacity_Focus, #00000017);
}

.c13:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c13.c13[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c13.c13[data-disabled='true'].c13.c13[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c14 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 12px 16px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Long, 400);
  font-size: var(--admiral-font-size-Body_Body1Long, 16px);
  line-height: var(--admiral-line-height-Body_Body1Long, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c14.c14 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c14.c14 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c14 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

ul[data-selectedid="13"] .c14.c14 {
  background: var(--admiral-color-Opacity_Focus, #00000017);
}

.c14:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c14.c14[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c14.c14[data-disabled='true'].c14.c14[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c0 {
  pointer-events: none;
  position: fixed;
  overflow: visible;
  z-index: var(--admiral-z-index-dropdown, 97);
}

.c3 {
  pointer-events: initial;
  margin: 8px 0;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  border-radius: var(--admiral-border-radius-Medium, 4px);
  box-shadow: var(--admiral-box-shadow-Shadow08,    0px 3.2px 9px 0px rgba(0, 0, 0, 0.16), 0px 0.6px 1.8px 0px rgba(0, 0, 0, 0.10), 0px -1.5px 6px 0px rgba(0, 0, 0, 0.06) );
  flex: 0 0 auto;
  opacity: 0;
  transition-delay: 200ms;
  transition-property: opacity;
}

.c2 {
  pointer-events: none;
  height: 100%;
  flex: 0 0 auto;
}

.c1 {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
}

.c5 {
  padding: unset;
  margin: unset;
}

.c4 {
  padding: 8px 0;
  overflow-x: hidden;
  overflow-y: auto;
  max-height: 288px;
  cursor: pointer;
  outline: none;
  margin: 8px 0;
}

<body>
    <div>
      ,
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3 c4 dropdown-container"
        style="opacity: 1;"
        tabindex="-1"
      >
        <ul
          class="c5"
        >
          <li
            class="c6"
            data-disabled="true"
          >
            Категория 1
          </li>
          <li
            class="c7"
            id="2"
            tabindex="0"
          >
            Номер Карты /****45
             
            <div
              height="24"
              width="24"
            />
            <div>
              Дополнительный текст
            </div>
          </li>
          <li
            class="c8"
            id="3"
            tabindex="0"
          >
            Номер Карты /****75
             
            <div
              height="24"
              width="24"
            />
            <div>
              Дополнительный текст
            </div>
          </li>
          <li
            class="c9"
            id="4"
            tabindex="0"
          >
            Номер Карты /****22
             
            <div
              height="24"
              width="24"
            />
            <div>
              Дополнительный текст
            </div>
          </li>
          <li
            class="c10"
            id="5"
            tabindex="0"
          >
            Номер Карты /****33
             
            <div
              height="24"
              width="24"
            />
            <div>
              Дополнительный текст
            </div>
          </li>
          <li
            class="c6"
            data-disabled="true"
          >
            Категория 2
          </li>
          <li
            class="c11"
            id="10"
            tabindex="0"
          >
            Номер Карты /****21
             
            <div
              height="24"
              width="24"
            />
            <div>
              Дополнительный текст
            </div>
          </li>
          <li
            class="c12"
            id="11"
            tabindex="0"
          >
            Номер Карты /****35
             
            <div
              height="24"
              width="24"
            />
            <div>
              Дополнительный текст
            </div>
          </li>
          <li
            class="c13"
            id="12"
            tabindex="0"
          >
            Номер Карты /****39
             
            <div
              height="24"
              width="24"
            />
            <div>
              Дополнительный текст
            </div>
          </li>
          <li
            class="c14"
            id="13"
            tabindex="0"
          >
            Номер Карты /****41
             
            <div
              height="24"
              width="24"
            />
            <div>
              Дополнительный текст
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DropDown should render small components 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c6 {
  display: flex;
  align-items: center;
  user-select: none;
  flex-flow: wrap;
  position: relative;
  justify-content: space-between;
  outline: none;
  white-space: pre;
  margin: 0;
  padding: 6px 12px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  text-overflow: ellipsis;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
  background: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
}

ul[data-dimension='m'] .c6.c6 {
  padding: 8px 16px;
}

ul[data-dimension='s'] .c6.c6 {
  padding: 6px 12px;
}

ul[data-dimension='s'] .c6 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Long, 400);
  font-size: var(--admiral-font-size-Body_Body2Long, 14px);
  line-height: var(--admiral-line-height-Body_Body2Long, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c6:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  cursor: pointer;
}

.c6.c6[data-disabled='true'] {
  cursor: not-allowed;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c6.c6[data-disabled='true'].c6.c6[data-disabled='true'] *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

.c0 {
  pointer-events: none;
  position: fixed;
  overflow: visible;
  z-index: var(--admiral-z-index-dropdown, 97);
}

.c3 {
  pointer-events: initial;
  margin: 8px 0;
  background-color: var(--admiral-color-Special_ElevatedBG, #FFFFFF);
  border-radius: var(--admiral-border-radius-Medium, 4px);
  box-shadow: var(--admiral-box-shadow-Shadow08,    0px 3.2px 9px 0px rgba(0, 0, 0, 0.16), 0px 0.6px 1.8px 0px rgba(0, 0, 0, 0.10), 0px -1.5px 6px 0px rgba(0, 0, 0, 0.06) );
  flex: 0 0 auto;
  opacity: 0;
  transition-delay: 200ms;
  transition-property: opacity;
}

.c2 {
  pointer-events: none;
  height: 100%;
  flex: 0 0 auto;
}

.c1 {
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
}

.c5 {
  padding: unset;
  margin: unset;
}

.c4 {
  padding: 8px 0;
  overflow-x: hidden;
  overflow-y: auto;
  max-height: 192px;
  cursor: pointer;
  outline: none;
  margin: 8px 0;
}

<body>
    <div />
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      />
      <div
        class="c3 c4 dropdown-container"
        style="opacity: 1;"
      >
        <ul
          class="c5"
        >
          <li
            class="c6"
            tabindex="0"
          >
            Option
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
